[package]
name = "backoffice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "3.4.0", features = ["compress-gzip", "rustls-0_21", "base64"] }
actix-service = "2.0.2"
actix-web = { version = "4.4.0", features = ["rustls-0_21", "secure-cookies", "compress-zstd"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive", "env"] }
clap-markdown = "0.1.3"
futures = "0.3.29"
futures-core = "0.3.29"
num_cpus = "1.16.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio", "metrics", "logs"] }
opentelemetry-prometheus = "0.13.0"
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry_sdk = { version = "0.20.0", features = ["metrics", "serde", "serde_json", "rt-tokio", "logs"] }
prometheus = { version = "0.13.3", features = ["process"] }
reqwest = { version = "0.11.22", features = ["cookies", "json", "rustls-tls"] }
rustls = "0.21.8"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
shadow-rs = "0.24.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "tracing", "fs"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ulid = { version = "1.1.0", features = ["serde"] }

[build-dependencies]
shadow-rs = "0.24.1"
